...

        <ImageButton
            android:id="@+id/copy_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_toStartOf="@id/share_button"
            android:background="@drawable/copy_button"
            android:contentDescription='"Duplicate Recipe"' />

        <ImageView
            android:id="@+id/share_button"
            android:layout_width="wrap_content"
...
                    layout="@layout/photo_view"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1.5" />

                <EditText
                    android:id="@+id/Notes"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:background="@android:drawable/editbox_background_normal"
                    android:ems="10"
                    android:hint="Add Notes"
...
