...
    <item
        android:id="@+id/new_recipe_button"
        android:title="@string/new_recipe"
        android:icon="@drawable/new_recipe"
        android:enabled="true"/>
    <item
        android:id="@+id/browse_recipe_button"
        android:title="@string/browse_recipes"
        android:icon="@drawable/browse_recipes"
        android:enabled="true"/>
    <item
        android:id="@+id/current_recipe_button"
        android:title="@string/current_recipe"
...
