<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/RecipeBrowser"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.gridlayout.widget.GridLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:orientation="horizontal">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/searchRecipeName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:backgroundTint="@android:color/transparent"
                android:gravity="start"
                android:hint="@string/search"
                android:importantForAutofill="no"
                android:includeFontPadding="true"
                android:inputType="textFilter"
                android:paddingStart="10dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                app:layout_constraintEnd_toStartOf="@id/textView"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <requestFocus />
            </EditText>

            <TextView
                android:id="@+id/textView"
                style="@style/Theme.Chefsnotes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:text="@string/recipe_name"
                android:textColor="#000000"
                android:textSize="13sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/searchToggle" />

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/searchToggle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="bottom"
                android:paddingBottom="2dp"
                android:scaleX=".9"
                android:scaleY=".9"
                app:layout_constraintStart_toEndOf="@id/textView"
                app:layout_constraintTop_toTopOf="parent"
                app:thumbTint="@color/switch_thumb_selector"
                app:trackTint="@color/switch_track_selector" />

            <TextView
                android:id="@+id/ingToggle"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_marginEnd="5dp"
                android:layout_marginBottom="8dp"
                android:gravity="center_vertical"
                android:text="@string/ingredients"
                android:textAlignment="center"
                android:textColor="#000000"
                android:textSize="13sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/searchToggle"
                tools:textAlignment="center" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1.5dp"
            android:layout_marginStart="3dp"
            android:layout_marginTop="-7dp"
            android:layout_marginEnd="3dp"
            android:background="@color/main_logo"
            app:layout_column="0"
            app:layout_row="1" />

        <TextView
            android:id="@+id/searchDesc"
            style="@style/Theme.Chefsnotes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginBottom="5dp"
            android:text="@string/search_mode_name"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="#000000"
            app:layout_column="0"
            app:layout_row="1" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/tagConstraint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_column="0"
            app:layout_gravity="start"
            app:layout_row="2">

            <androidx.constraintlayout.helper.widget.Flow
                android:id="@+id/filterTagLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:flow_horizontalBias=".1"
                app:flow_horizontalGap="10dp"
                app:flow_horizontalStyle="packed"
                app:flow_verticalAlign="center"
                app:flow_verticalGap="10dp"
                app:flow_wrapMode="chain"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <ScrollView
            android:id="@+id/resultContainer"
            android:layout_width="match_parent"
            android:layout_height="300sp"
            android:layout_marginTop="20dp"
            app:layout_column="0"
            app:layout_row="3">

            <comp3350.chefsnotes.presentation.FullListView
                android:id="@+id/results"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp" />
        </ScrollView>

        <View
            android:id="@+id/divider2"
            android:layout_width="match_parent"
            android:layout_height="160dp"
            android:layout_marginTop="100dp"
            android:background="?android:attr/listDivider" />


    </androidx.gridlayout.widget.GridLayout>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottomNavigationView"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:menu="@menu/menu_bottom" />
</androidx.constraintlayout.widget.ConstraintLayout>